--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,12 @@
 repos:
 - repo: https://github.com/antonbabenko/pre-commit-terraform
-  rev: v1.76.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
+  rev: v1.77.0 # Get the latest from: https://github.com/antonbabenko/pre-commit-terraform/releases
   hooks:
-    - id: terraform_tflint
-    # - id: terraform_validate
     - id: terraform_fmt
     - id: terraform_docs
-      args:
-      - --hook-config=--path-to-file=README.md        # Valid UNIX path. I.e. ../TFDOC.md or docs/README.md etc.
-      - --hook-config=--add-to-existing-file=true     # Boolean. true or false
-      - --hook-config=--create-file-if-not-exist=true # Boolean. true or false
+    - id: terraform_tflint
     # - id: terraform_checkov
-    - id: terraform_providers_lock
+    # - id: terraform_providers_lock
     # - id: terraform_tfsec
     # - id: terrascan
     # - id: tfupdate
@@ -21,3 +16,11 @@ repos:
     #   args:
     #     - --args=--path=.
     #   verbose: true
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.4.0
+  hooks:
+    - id: check-merge-conflict
+    - id: trailing-whitespace
+    - id: check-yaml
+    - id: check-added-large-files
+    - id: detect-private-key
