--- a/.devcontainer/rover_on_ssh_host.yml
+++ b/.devcontainer/rover_on_ssh_host.yml
@@ -4,10 +4,15 @@
 # Licensed under the MIT License. See https://go.microsoft.com/fwlink/?linkid=2090316 for license information.
 #-------------------------------------------------------------------------------------------------------------
 
-version: "3.7"
+#
+# Docker compose to open the rover in remote ssh shells
+#
+
+version: '3.7'
 services:
   rover:
-    image: aztfmod/rover:1.4.6-2305.1807
+    image: aztfmod/rover:1.5.4-2307.2804
+
     user: vscode
 
     labels:
@@ -16,14 +21,14 @@ services:
     volumes:
       # This is where VS Code should expect to find your project's source code
       # and the value of "workspaceFolder" in .devcontainer/devcontainer.json
-      - ..:/tf/caf
+      - .:/tf/caf
       - volume-caf-vscode:/home/vscode
-      - ~/.ssh:/tmp/.ssh-localhost:ro
       - volume-caf-vscode-bashhistory:/commandhistory
+      - ~/.ssh:/tmp/.ssh-localhost:ro
       - /var/run/docker.sock:/var/run/docker.sock
 
     # Overrides default command so things don't shut down after the process ends.
-    command: /bin/bash -c "while sleep 1000; do :; done"
+    command: /bin/sh -c "while sleep 1000; do :; done"
 
 volumes:
   volume-caf-vscode:
