--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -3,7 +3,7 @@ name: Reusable workflow example
 on:
   workflow_call:
     inputs:
-      config-path:
+      command:
         required: true
         type: string
     # secrets:
@@ -14,7 +14,4 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/labeler@v4
-      with:
-        repo-token: ${{ secrets.token }}
-        configuration-path: ${{ inputs.config-path }}
+    - run: ${{ inputs.config-path }}
