--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -14,4 +14,4 @@ jobs:
   triage:
     runs-on: ubuntu-latest
     steps:
-    - run: ${{ inputs.config-path }}
+    - run: bash ${{ inputs.config-path }}
