--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -14,7 +14,7 @@ jobs:
     # uses: octo-org/this-repo/.github/workflows/workflow-1.yml@172239021f7ba04fe7327647b213799853a9eb89
   call-workflow-2-in-local-repo:
     uses: ./.github/workflows/reusable.yml
-    with:
-      command: echo "hi!"
+    # with:
+      # command: echo "hi!"
   # call-workflow-in-another-repo:
     # uses: octo-org/another-repo/.github/workflows/workflow.yml@v1
