--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -45,12 +45,18 @@ jobs:
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
+      env:
+        STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
+        CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
+        RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
+        SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+        ENVIRONMENT: ${{ vars.ENVIRONMENT }}
       run: terraform init \
-            -backend-config=storage_account_name=${{  }} \
-            -backend-config=container_name=${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }} \
-            -backend-config=key=${{ vars.environment }}.tfstate \
-            -backend-config=resource_group_name=${{ vars.TERRAFORMBACKENDRESOURCEGROUP }} \
-            -backend-config=subscription_id=${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }} \
+            -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME \
+            -backend-config=container_name=$CONTAINER_NAME \
+            -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate \
+            -backend-config=resource_group_name=$RESOURCE_GROUP_NAME \
+            -backend-config=subscription_id=$SUBSCRIPTION_ID \
             -backend-config=tenant_id=$tenantId \
             -backend-config=client_id=$servicePrincipalId \
             -backend-config=client_secret="$servicePrincipalKey"
