--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -51,7 +51,8 @@ jobs:
         RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
         SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      run: terraform init \
+      run: |
+          terraform init \
             -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME \
             -backend-config=container_name=$CONTAINER_NAME \
             -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate \
