--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -53,6 +53,7 @@ jobs:
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
       run: |
           terraform init \
+            -chdir="modules/stack/hub/"
             -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME \
             -backend-config=container_name=$CONTAINER_NAME \
             -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate \
