--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -2,12 +2,12 @@ name: 'Terraform Plan/Apply'
 
 on:
   workflow_call:
-  push:
-    branches:
-    - main
-  pull_request:
-    branches:
-    - main
+  # push:
+  #   branches:
+  #   - main
+  # pull_request:
+  #   branches:
+  #   - main
 
 #Special permissions required for OIDC authentication
 permissions:
@@ -53,7 +53,7 @@ jobs:
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
       run: |
           terraform init \
-            -chdir="modules/stack/hub/"
+            -chdir="modules/stack/hub/" \
             -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME \
             -backend-config=container_name=$CONTAINER_NAME \
             -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate \
