Updates vscode prefs

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,20 @@
 # Local .debug directories
 **/.debug/*
 
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
