--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -17,9 +17,10 @@ on:
 
 #These environment variables are used by the terraform azure provider to setup OIDC authentication.
 env:
-  ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-  ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+  # ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
+  # ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
+  # ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+  # ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
 
 jobs:
   terraform-plan:
@@ -27,6 +28,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: nprd
     env:
+      ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
+      ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+      ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
       #this is needed since we are running terraform with read-only permissions
       ARM_SKIP_PROVIDER_REGISTRATION: true
     # outputs:
