--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -56,12 +56,12 @@ jobs:
         RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
         SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      run: terraform -chdir="modules/stack/hub/" init -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME -backend-config=container_name=$CONTAINER_NAME -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate -backend-config=resource_group_name=$RESOURCE_GROUP_NAME -backend-config=subscription_id=$SUBSCRIPTION_ID -backend-config=tenant_id=$tenantId -backend-config=client_id=$servicePrincipalId -backend-config=client_secret="$servicePrincipalKey"
+      run: az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID #terraform -chdir="modules/stack/hub/" init -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME -backend-config=container_name=$CONTAINER_NAME -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate -backend-config=resource_group_name=$RESOURCE_GROUP_NAME -backend-config=subscription_id=$SUBSCRIPTION_ID -backend-config=tenant_id=$tenantId -backend-config=client_id=$servicePrincipalId -backend-config=client_secret="$servicePrincipalKey"
 
     # Checks that all Terraform configuration files adhere to a canonical format
     # Will fail the build if not
     - name: Terraform Format
-      run: terraform fmt -check
+      run: terraform -chdir="modules/stack/hub/" fmt -check
 
   #   # Generates an execution plan for Terraform
   #   # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
