--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -14,27 +14,31 @@ jobs:
     name: Deploy nprd hub
     runs-on: ubuntu-latest
     environment: nprd
+    outputs:
+      ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+      ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+      ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
+      ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
     env:
       ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
       ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
       ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
 
-    steps:
-    - name: Terraform Init
-      env:
-        STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
-        CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
-        RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
-        SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
-        ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-      run: export -p ; az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID #terraform -chdir="modules/stack/hub/" init -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME -backend-config=container_name=$CONTAINER_NAME -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate -backend-config=resource_group_name=$RESOURCE_GROUP_NAME -backend-config=subscription_id=$SUBSCRIPTION_ID -backend-config=tenant_id=$tenantId -backend-config=client_id=$servicePrincipalId -backend-config=client_secret="$servicePrincipalKey"
-
-  # plan_hub:
-  #   uses: ./.github/workflows/reusable.yml
-  #   with:
-  #     environment: nprd
-  #     tenant: db
-  #   secrets:
-  #     ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
-  #     ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+  invoke_plan:
+    needs: init_hub
+    uses: ./.github/workflows/reusable.yml
+    with:
+      environment: nprd
+      tenant: db
+    secrets:
+      ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+      ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
+    # - name: Terraform Init
+    #   env:
+    #     STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
+    #     CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
+    #     RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
+    #     SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+    #     ENVIRONMENT: ${{ vars.ENVIRONMENT }}
+    #   run: export -p ; az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID #terraform -chdir="modules/stack/hub/" init -backend-config=storage_account_name=$STORAGE_ACCOUNT_NAME -backend-config=container_name=$CONTAINER_NAME -backend-config=key=db/${ENVIRONMENT}/hub_landing_zone.tfstate -backend-config=resource_group_name=$RESOURCE_GROUP_NAME -backend-config=subscription_id=$SUBSCRIPTION_ID -backend-config=tenant_id=$tenantId -backend-config=client_id=$servicePrincipalId -backend-config=client_secret="$servicePrincipalKey"
