--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -49,6 +49,8 @@ jobs:
     env:
       ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ vars.ARM_SUBSCRIPTION_ID }}"
+      ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
+      ARM_TENANT_ID: "${{ secrets.ARM_TENANT_ID }}"
       #this is needed since we are running terraform with read-only permissions
       ARM_SKIP_PROVIDER_REGISTRATION: true
     # outputs:
