--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -78,7 +78,7 @@ jobs:
         BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
         # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
-      run: >
+      run: |
         terraform -chdir="modules/stack/hub/" init \
           -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}"
           -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
