--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -80,7 +80,7 @@ jobs:
         # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
       run: |
         terraform -chdir="modules/stack/hub/" init \
-          -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}"
+          -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
           -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
           -backend-config="key=db/${ENVIRONMENT}/hub_landing_zone.tfstate" \
           -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
