--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -85,79 +85,76 @@ jobs:
           -backend-config="key=db/${ENVIRONMENT}/hub_landing_zone.tfstate" \
           -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
           -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
-          # -backend-config="tenant_id=${ARM_TENANT_ID}" \
-          # -backend-config="client_id=${ARM_CLIENT_ID}" \
-          # -backend-config="client_secret=${ARM_CLIENT_SECRET}"
 
     # Checks that all Terraform configuration files adhere to a canonical format
     # Will fail the build if not
     - name: Terraform Format
       run: terraform -chdir="modules/stack/hub/" fmt -check
 
-  #   # Generates an execution plan for Terraform
-  #   # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
-  #   - name: Terraform Plan
-  #     id: tf-plan
-  #     run: |
-  #       export exitcode=0
-  #       terraform plan -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+    # Generates an execution plan for Terraform
+    # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
+    - name: Terraform Plan
+      id: tf-plan
+      run: |
+        export exitcode=0
+        terraform -chdir="modules/stack/hub/" plan -var="environment=${ENVIRONMENT}" -detailed-exitcode -no-color -out tfplan || export exitcode=$?
 
-  #       echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
+        echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
 
-  #       if [ $exitcode -eq 1 ]; then
-  #         echo Terraform Plan Failed!
-  #         exit 1
-  #       else
-  #         exit 0
-  #       fi
+        if [ $exitcode -eq 1 ]; then
+          echo Terraform Plan Failed!
+          exit 1
+        else
+          exit 0
+        fi
 
-  #   # Save plan to artifacts
-  #   - name: Publish Terraform Plan
-  #     uses: actions/upload-artifact@v3
-  #     with:
-  #       name: tfplan
-  #       path: tfplan
+    # Save plan to artifacts
+    - name: Publish Terraform Plan
+      uses: actions/upload-artifact@v3
+      with:
+        name: tfplan
+        path: tfplan
 
-  #   # Create string output of Terraform Plan
-  #   - name: Create String Output
-  #     id: tf-plan-string
-  #     run: |
-  #       TERRAFORM_PLAN=$(terraform show -no-color tfplan)
+    # Create string output of Terraform Plan
+    - name: Create String Output
+      id: tf-plan-string
+      run: |
+        TERRAFORM_PLAN=$(terraform show -no-color tfplan)
 
-  #       delimiter="$(openssl rand -hex 8)"
-  #       echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
-  #       echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
-  #       echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
-  #       echo "" >> $GITHUB_OUTPUT
-  #       echo '```terraform' >> $GITHUB_OUTPUT
-  #       echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
-  #       echo '```' >> $GITHUB_OUTPUT
-  #       echo "</details>" >> $GITHUB_OUTPUT
-  #       echo "${delimiter}" >> $GITHUB_OUTPUT
+        delimiter="$(openssl rand -hex 8)"
+        echo "summary<<${delimiter}" >> $GITHUB_OUTPUT
+        echo "## Terraform Plan Output" >> $GITHUB_OUTPUT
+        echo "<details><summary>Click to expand</summary>" >> $GITHUB_OUTPUT
+        echo "" >> $GITHUB_OUTPUT
+        echo '```terraform' >> $GITHUB_OUTPUT
+        echo "$TERRAFORM_PLAN" >> $GITHUB_OUTPUT
+        echo '```' >> $GITHUB_OUTPUT
+        echo "</details>" >> $GITHUB_OUTPUT
+        echo "${delimiter}" >> $GITHUB_OUTPUT
 
-  #   # Publish Terraform Plan as task summary
-  #   - name: Publish Terraform Plan to Task Summary
-  #     env:
-  #       SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
-  #     run: |
-  #       echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
+    # Publish Terraform Plan as task summary
+    - name: Publish Terraform Plan to Task Summary
+      env:
+        SUMMARY: ${{ steps.tf-plan-string.outputs.summary }}
+      run: |
+        echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
-  #   # If this is a PR post the changes
-  #   - name: Push Terraform Output to PR
-  #     if: github.ref != 'refs/heads/main'
-  #     uses: actions/github-script@v6
-  #     env:
-  #       SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-  #     with:
-  #         github-token: ${{ secrets.GITHUB_TOKEN }}
-  #         script: |
-  #           const body = `${process.env.SUMMARY}`;
-  #           github.rest.issues.createComment({
-  #               issue_number: context.issue.number,
-  #               owner: context.repo.owner,
-  #               repo: context.repo.repo,
-  #               body: body
-  #           })
+    # If this is a PR post the changes
+    - name: Push Terraform Output to PR
+      if: github.ref != 'refs/heads/main'
+      uses: actions/github-script@v6
+      env:
+        SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
+      with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const body = `${process.env.SUMMARY}`;
+            github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: body
+            })
 
   # terraform-apply:
   #   name: 'Terraform Apply'
