--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -19,7 +19,7 @@ jobs:
     with:
       environment: ${{ matrix.environment }}
       tenant: db
-      stack: ${{ matrix.environment }}
+      stack: ${{ matrix.stack }}
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
