--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -85,7 +85,7 @@ jobs:
         ENVIRONMENT: ${{ vars.ENVIRONMENT }}
         # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
       run: |
-        terraform -chdir="${WORKING_DIR}" init \
+        terraform -chdir=$WORKING_DIR init \
           -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
           -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
           -backend-config="key=db/${ENVIRONMENT}/hub_landing_zone.tfstate" \
@@ -95,7 +95,7 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     # Will fail the build if not
     - name: Terraform Format
-      run: terraform -chdir="${WORKING_DIR}" fmt -check
+      run: terraform -chdir=$WORKING_DIR fmt -check
 
     # Generates an execution plan for Terraform
     # An exit code of 0 indicated no changes, 1 a terraform failure, 2 there are pending changes.
@@ -103,7 +103,7 @@ jobs:
       id: tf-plan
       run: |
         export exitcode=0
-        terraform -chdir="${WORKING_DIR}" plan -var="environment=${ENVIRONMENT}" -detailed-exitcode -no-color -out tfplan || export exitcode=$?
+        terraform -chdir=$WORKING_DIR plan -var="environment=${ENVIRONMENT}" -detailed-exitcode -no-color -out tfplan || export exitcode=$?
 
         echo "exitcode=$exitcode" >> $GITHUB_OUTPUT
 
