--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -117,7 +117,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: tfplan
-        path: tfplan
+        path: ${{env.WORKING_DIR}}/tfplan
 
     # Create string output of Terraform Plan
     - name: Create String Output
