troubleshooting String Output

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -123,6 +123,7 @@ jobs:
     - name: Create String Output
       id: tf-plan-string
       run: |
+        ls $WORKINGDIR
         TERRAFORM_PLAN=$(terraform show -no-color ${WORKINGDIR}/tfplan)
 
         delimiter="$(openssl rand -hex 8)"
