--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -50,7 +50,7 @@ jobs:
   terraform-plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
-    environment: nprd
+    environment: ${{inputs.environment}}
     env:
       ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
@@ -108,6 +108,9 @@ jobs:
         if [ $exitcode -eq 1 ]; then
           echo Terraform Plan Failed!
           exit 1
+        elif [ $exitcode -eq 2 ]; then
+          echo Changes Detected!
+          exit 2
         else
           exit 0
         fi
