--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -60,8 +60,8 @@ jobs:
       ARM_SKIP_PROVIDER_REGISTRATION: true
       WORKING_DIR: "modules/stack/${{ inputs.stack }}"
       ENVIRONMENT: ${{ vars.ENVIRONMENT }}
-    # outputs:
-    #   tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
+    outputs:
+      tfplanExitCode: ${{ steps.tf-plan.outputs.exitcode }}
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -108,9 +108,6 @@ jobs:
         if [ $exitcode -eq 1 ]; then
           echo Terraform Plan Failed!
           exit 1
-        elif [ $exitcode -eq 2 ]; then
-          echo Changes Detected!
-          exit 2
         else
           exit 0
         fi
