--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
     - main
+    paths:
+    - modules/stack/hub
+    - modules/stack/bastion
   pull_request:
     branches:
     - main
@@ -13,7 +16,7 @@ jobs:
   invoke_hub_deploy:
     strategy:
       matrix:
-        environment: [nprd] #, sim]
+        environment: [nprd, sim]
         stack: [hub]
     uses: ./.github/workflows/reusable.yml
     with:
