--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -18,6 +18,10 @@ on:
         type: string
         description: The stack to deploy
         required: true
+      key:
+        type: string
+        required: true
+        description: State filename to use
     secrets:
       ARM_CLIENT_SECRET:
         required: true
@@ -86,7 +90,7 @@ jobs:
         terraform -chdir=$WORKING_DIR init \
           -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
           -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
-          -backend-config="key=db/${ENVIRONMENT}/hub_landing_zone.tfstate" \
+          -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
           -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
           -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
 
@@ -197,7 +201,7 @@ jobs:
         terraform -chdir=$WORKING_DIR init \
           -backend-config="storage_account_name=${BACKEND_STORAGE_ACCOUNT_NAME}" \
           -backend-config="container_name=${BACKEND_CONTAINER_NAME}" \
-          -backend-config="key=db/${ENVIRONMENT}/hub_landing_zone.tfstate" \
+          -backend-config="key=db/${ENVIRONMENT}/${{ inputs.key }}.tfstate" \
           -backend-config="resource_group_name=${BACKEND_RESOURCE_GROUP_NAME}" \
           -backend-config="subscription_id=${BACKEND_SUBSCRIPTION_ID}" \
 
