--- a/.github/workflows/caller.yml
+++ b/.github/workflows/caller.yml
@@ -62,7 +62,7 @@ jobs:
 
   invoke_sim_hub_resource_group_deploy:
     uses: ./.github/workflows/reusable.yml
-    needs: invoke_sim_hub_deploy
+    needs: invoke_sim_hub_bastion_host_deploy
     with:
       environment: sim
       tenant: db
