--- a/.github/workflows/deploy_connectivity_hub.yml
+++ b/.github/workflows/deploy_connectivity_hub.yml
@@ -1,23 +1,28 @@
-name: 'Deploy Connectivity Hub'
+name: "Deploy Connectivity Hub"
 
 on:
   workflow_dispatch:
   push:
     branches:
-    - main
+      - main
     paths:
-    - 'modules/stack/hub/**'
-    - 'modules/stack/bastion/**'
-    - '.github/workflows/**'
+      - "modules/stack/hub/**"
+      - "modules/stack/bastion/**"
+      - ".github/workflows/**"
   pull_request:
     branches:
-    - main
+      - main
+    paths:
+      - "modules/stack/hub/**"
+      - "modules/stack/bastion/**"
+      - ".github/workflows/**"
 
 jobs:
   invoke_hub_deploy:
     strategy:
       matrix:
         environment: [nprd, sim]
+    name: Deploy Hub Network and Firewalls
     uses: ./.github/workflows/terraform_plan_apply.yml
     with:
       environment: ${{ matrix.environment }}
@@ -32,6 +37,7 @@ jobs:
     strategy:
       matrix:
         environment: [nprd, sim]
+    name: Deploy Hub Bastion Host
     uses: ./.github/workflows/terraform_plan_apply.yml
     needs: invoke_hub_deploy
     with:
@@ -42,38 +48,3 @@ jobs:
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
-  # invoke_sim_hub_deploy:
-  #   uses: ./.github/workflows/terraform_plan_apply.yml
-  #   with:
-  #     environment: sim
-  #     tenant: db
-  #     stack: hub
-  #     key: hub_landing_zone
-  #   secrets:
-  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
-  # invoke_sim_hub_bastion_host_deploy:
-  #   uses: ./.github/workflows/terraform_plan_apply.yml
-  #   needs: invoke_sim_hub_deploy
-  #   with:
-  #     environment: sim
-  #     tenant: db
-  #     stack: bastion
-  #     key: hub_bastion
-  #   secrets:
-  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
-  # invoke_sim_hub_resource_group_deploy:
-  #   uses: ./.github/workflows/terraform_plan_apply.yml
-  #   needs: invoke_sim_hub_bastion_host_deploy
-  #   with:
-  #     environment: sim
-  #     tenant: db
-  #     stack: next
-  #     key: hub_resource_group_temp
-  #   secrets:
-  #     ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  #     ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
