Corrects destroy to apply

--- a/.github/workflows/terraform_plan_destroy.yml
+++ b/.github/workflows/terraform_plan_destroy.yml
@@ -215,4 +215,4 @@ jobs:
       # Terraform Destroy
       - name: Terraform Destroy
         run: |
-          terraform -chdir=$WORKING_DIR destroy -auto-approve tfplan
+          terraform -chdir=$WORKING_DIR apply -auto-approve tfplan
