--- a/.github/workflows/destroy_connectivity_hub.yml
+++ b/.github/workflows/destroy_connectivity_hub.yml
@@ -4,33 +4,33 @@ on:
   workflow_dispatch:
 
 jobs:
-  invoke_hub_destroy:
-    strategy:
-      matrix:
-        environment: [nprd, sim]
-    name: ${{ matrix.environment }} - Destroy Hub Network and Firewalls
-    uses: ./.github/workflows/terraform_plan_destroy.yml
-    with:
-      environment: ${{ matrix.environment }}
-      tenant: db
-      stack: hub
-      key: hub_landing_zone
-    secrets:
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-
   invoke_hub_bastion_host_destroy:
     strategy:
       matrix:
         environment: [nprd, sim]
     name: ${{ matrix.environment }} - Destroy Hub Bastion Host
     uses: ./.github/workflows/terraform_plan_destroy.yml
-    needs: invoke_hub_destroy
     with:
       environment: ${{ matrix.environment }}
       tenant: db
       stack: bastion
       key: hub_bastion
+    secrets:
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+  invoke_hub_destroy:
+    strategy:
+      matrix:
+        environment: [nprd, sim]
+    name: ${{ matrix.environment }} - Destroy Hub Network and Firewalls
+    uses: ./.github/workflows/terraform_plan_destroy.yml
+    needs: invoke_hub_bastion_host_destroy
+    with:
+      environment: ${{ matrix.environment }}
+      tenant: db
+      stack: hub
+      key: hub_landing_zone
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
