--- a/.github/workflows/terraform_plan_destroy.yml
+++ b/.github/workflows/terraform_plan_destroy.yml
@@ -54,7 +54,7 @@ jobs:
   terraform-plan:
     name: "Terraform Plan"
     runs-on: ubuntu-latest
-    environment: ${{inputs.environment}}
+    # environment: ${{inputs.environment}}
     env:
       ARM_CLIENT_ID: "${{ vars.ARM_CLIENT_ID }}"
       ARM_CLIENT_SECRET: "${{ secrets.ARM_CLIENT_SECRET }}"
