--- a/.github/workflows/terraform_plan_destroy.yml
+++ b/.github/workflows/terraform_plan_destroy.yml
@@ -18,10 +18,26 @@ on:
         type: string
         description: The stack to deploy
         required: true
-      key:
+      backend_subscription_id:
         type: string
         required: true
-        description: State filename to use
+        description: ID of the Subscription Containing the Backend Resource Group
+      backend_resource_group:
+        type: string
+        required: true
+        description: Name of the Resource Group Containing the Backend Storage Account
+      backend_storage_account:
+        type: string
+        required: true
+        description: Name of the Storage Account Containing the Backend Storage Container
+      backend_storage_container:
+        type: string
+        required: true
+        description: Name of the Container Containing the Backend State Key
+      backend_key:
+        type: string
+        required: true
+        description: Name of the State Key to Use (no extension)
     secrets:
       ARM_CLIENT_SECRET:
         required: true
@@ -29,13 +45,6 @@ on:
       ARM_TENANT_ID:
         required: true
         description: Service Principal Tenant for Authentication
-
-  # push:
-  #   branches:
-  #   - main
-  # pull_request:
-  #   branches:
-  #   - main
 
 #Special permissions required for OIDC authentication
 # permissions:
@@ -81,10 +90,10 @@ jobs:
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         env:
-          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
-          BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
-          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
-          BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.BACKEND_STORAGE_ACCOUNT }}
+          BACKEND_CONTAINER_NAME: ${{ vars.BACKEND_STORAGE_CONTAINER }}
+          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.BACKEND_RESOURCE_GROUP }}
+          BACKEND_SUBSCRIPTION_ID: ${{ vars.BACKEND_SUBSCRIPTION_ID }}
           # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
         run: |
           terraform -chdir=$WORKING_DIR init \
@@ -192,10 +201,10 @@ jobs:
       # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
       - name: Terraform Init
         env:
-          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.TERRAFORMBACKENDSTORAGEACCOUNT }}
-          BACKEND_CONTAINER_NAME: ${{ vars.TERRAFORMBACKENDSTORAGECONTAINER }}
-          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.TERRAFORMBACKENDRESOURCEGROUP }}
-          BACKEND_SUBSCRIPTION_ID: ${{ vars.TERRAFORMBACKENDSUBSCRIPTIONID }}
+          BACKEND_STORAGE_ACCOUNT_NAME: ${{ vars.BACKEND_STORAGE_ACCOUNT }}
+          BACKEND_CONTAINER_NAME: ${{ vars.BACKEND_STORAGE_CONTAINER }}
+          BACKEND_RESOURCE_GROUP_NAME: ${{ vars.BACKEND_RESOURCE_GROUP }}
+          BACKEND_SUBSCRIPTION_ID: ${{ vars.BACKEND_SUBSCRIPTION_ID }}
           # export -p && az login --service-principal --username $ARM_CLIENT_ID --password $ARM_CLIENT_SECRET --tenant $ARM_TENANT_ID &&
         run: |
           terraform -chdir=$WORKING_DIR init \
