--- a/.github/workflows/destroy_connectivity_hub.yml
+++ b/.github/workflows/destroy_connectivity_hub.yml
@@ -14,7 +14,7 @@ jobs:
       environment: ${{ matrix.environment }}
       tenant: db
       stack: bastion
-      key: hub_bastion
+      backend_key: hub_bastion
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
@@ -30,7 +30,7 @@ jobs:
       environment: ${{ matrix.environment }}
       tenant: db
       stack: hub
-      key: hub_landing_zone
+      backend_key: hub_landing_zone
     secrets:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
